IBM/JSONata4Java#40